[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Menu/MenuBox.gd" type="Script" id=1]
[ext_resource path="res://Images/Menu/MenuPanel.png" type="Texture" id=2]
[ext_resource path="res://Images/Menu/MinSquare.png" type="Texture" id=3]
[ext_resource path="res://Images/Menu/MinSquareHover.png" type="Texture" id=4]
[ext_resource path="res://Images/Menu/MenuButtonStory.png" type="Texture" id=5]
[ext_resource path="res://Images/Menu/MenuButtonStoryHover.png" type="Texture" id=6]
[ext_resource path="res://Images/Menu/MenuButtonSandbox.png" type="Texture" id=7]
[ext_resource path="res://Images/Menu/MenuButtonSandboxHover.png" type="Texture" id=8]
[ext_resource path="res://Images/Menu/MenuButtonCodeEditor.png" type="Texture" id=9]
[ext_resource path="res://Images/Menu/MenuButtonCodeEditorHover.png" type="Texture" id=10]
[ext_resource path="res://Images/Menu/MenuButtonOnline.png" type="Texture" id=11]
[ext_resource path="res://Images/Menu/MenuButtonOnlineHover.png" type="Texture" id=12]
[ext_resource path="res://Images/Menu/MenuButtonOptions.png" type="Texture" id=13]
[ext_resource path="res://Images/Menu/MenuButtonOptionsHover.png" type="Texture" id=14]
[ext_resource path="res://Images/Menu/MenuButtonLogout.png" type="Texture" id=15]
[ext_resource path="res://Images/Menu/MenuButtonLogoutHover.png" type="Texture" id=16]

[node name="MenuBox" type="Node2D" index="0"]

position = Vector2( 248, 56 )
script = ExtResource( 1 )

[node name="Frame" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 4.0
margin_right = 531.0
margin_bottom = 591.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
patch_margin_left = 40
patch_margin_top = 40
patch_margin_right = 20
patch_margin_bottom = 30
_sections_unfolded = [ "Patch Margin" ]

[node name="CloseBtn" type="TextureButton" parent="Frame" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 11.0
margin_right = 29.0
margin_bottom = 29.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
_sections_unfolded = [ "Textures" ]

[node name="StoryBtn" type="TextureButton" parent="Frame" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 44.0
margin_right = 488.0
margin_bottom = 93.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
_sections_unfolded = [ "Textures" ]

[node name="SandboxBtn" type="TextureButton" parent="Frame" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 130.0
margin_right = 486.0
margin_bottom = 179.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="EditorBtn" type="TextureButton" parent="Frame" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 214.0
margin_right = 488.0
margin_bottom = 263.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="OnlineBtn" type="TextureButton" parent="Frame" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 70.0
margin_top = 300.0
margin_right = 486.0
margin_bottom = 349.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 12 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="OptionsBtn" type="TextureButton" parent="Frame" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 394.0
margin_right = 112.0
margin_bottom = 434.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 14 )
_sections_unfolded = [ "Textures" ]

[node name="LogoutBtn" type="TextureButton" parent="Frame" index="6"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 72.0
margin_top = 484.0
margin_right = 488.0
margin_bottom = 533.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 15 )
texture_hover = ExtResource( 16 )
_sections_unfolded = [ "Rect", "Textures" ]

[node name="WindowTitle" type="Label" parent="Frame" index="7"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 562.0
margin_right = 139.0
margin_bottom = 593.0
rect_rotation = 270.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0.129412, 0.682353, 0.768627, 1 )
text = "Main Menu"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_colors", "custom_fonts" ]

[connection signal="pressed" from="Frame/CloseBtn" to="." method="_on_CloseBtn_pressed"]

[connection signal="pressed" from="Frame/StoryBtn" to="." method="_on_StoryBtn_pressed"]

[connection signal="pressed" from="Frame/SandboxBtn" to="." method="_on_SandboxBtn_pressed"]

[connection signal="pressed" from="Frame/EditorBtn" to="." method="_on_EditorBtn_pressed"]

[connection signal="pressed" from="Frame/OnlineBtn" to="." method="_on_OnlineBtn_pressed"]

[connection signal="pressed" from="Frame/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]

[connection signal="pressed" from="Frame/LogoutBtn" to="." method="_on_LogoutBtn_pressed"]


